--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -32,7 +32,7 @@ $primary-color: #9cd1d7;
 @import url(https://fonts.googleapis.com/css?family=Pontano+Sans);
 
 // IMPORT ICONS
-@import url(http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 
 //PACE
 .pace {
